data/derived/comb/progs/unify/prog3255.ml.out
Characters 95-99:
  List.fold_left f base fs;;
                   ^^^^
Error: This expression has type 'a -> 'a
       but an expression was expected of type 'a -> 'b -> 'c -> 'a
       The type variable 'a occurs inside 'b -> 'c -> 'a
